<resources>
    <string name="app_name">Hillforts</string>
    <string name="hillfortName">Townland Name</string>
    <string name="button_addHillford">Add Hillfort</string>
    <string name="button_county">County</string>
    <string name="menu_addHillfort">Add</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="save_hillfort"> Save Hill Fort </string>
    <string name="enter_hillfort_title"> Please enter a Hill Fort Title </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_hillfort_image">Select hill fort image</string>
    <string name="change_hillfort_image">Change hill fort image</string>
    <string name="dateVisited">Date Visited</string>
    <string name="position">Latitude and Longitude</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="dialog_title_delete">Delete</string>
    <string name="dialog_desc_delete">Are you sure you want to delete Hill fort?</string>
    <string name="title_activity_hillfort_map">Map of all Hillforts</string>
    <string name="menu_saveHillfort">Save</string>
    <string name="here">here</string>
</resources>
